stylesheets/default.css
a {
	font-size: 13px;
	color: #222;
	opacity: 0.85;
	text-decoration: none;
}

div {
	font-family: arial, sans-serif;
}

.main {
	display: block;
	width: 50%;
	margin: 0 auto;
	text-align: center;
	padding: 50px;
}

#google-logo {
}

#searchbar {

}

.button {
	display: inline-block;
	opacity: 1;
}

#search-buttons .button {
	border: 1px solid #f2f2f2;
	background-color: #f2f2f2;
	border-radius: 4px;
	color: #5F6368;
	font-size: 14px;
	margin: 11px 4px;
	padding: 0 16px;
}

#right-nav .button {
	font-weight: bold;
	line-height: 28px;
	border: 1px solid #4285f4;
	border-radius: 2px;
	padding: 7px 17px;
	margin-left: 15px;
	color: #fff;
	background-color: #4285f4;
}

.navigation {
	display: flex;
	width: 100%;
	justify-content: space-between;
	align-items: center;
}

#navbar {
	position: fixed;
	margin-top: 16px;
	min-width: 980px;
}

#footer {
	position: absolute;
	bottom: 0;
	height: 40px;
	background-color: #f2f2f2;
	min-width: 1139px;
}

#footer a {
	padding-left: 27px;
	font-size: 13px;
}

#footer #right-foot {
	margin-right: 30px;
}

#navbar #left-nav {
	margin-left: 10px;
}

#navbar #right-nav {
	margin-right: 35px;
}

#navbar a {
	padding-left: 15px;
}

#google-apps::before {
	content: "";
	background-image: url("../images/google_apps_black.png");
	background-repeat: no-repeat;
	display: inline-block;
	background-size: 100% 100%;
	width: 30px;
	height: 30px;
	vertical-align: middle;
	opacity: 0.65;
	transform: scale(0.85);
}

#google-apps:hover::before {
	opacity: 1;
}

.text-link:hover {
	text-decoration: underline;
}

